--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/imacakee/ProductManager-Lopez#readme",
   "dependencies": {
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "express-session": "^1.18.0",
     "mongoose": "^8.0.3",
     "mongoose-paginate-v2": "^1.7.4",
     "nodemon": "^3.0.1",
