added reset password and expiration time

--- a/.env.default
+++ b/.env.default
@@ -6,3 +6,5 @@ PRIVATE_KEY = {{PrivateKey}}
 CLIENT_ID = {{ClientId}}
 CLIENT_SECRET = {{ClientSecret}}
 CALLBACK_URL = {{CallbackUrl}}
+GMAIL_ACCOUNT = {{GmailAccount}}
+GMAIL_PASSWORD = {{GmailPassword}}
